--- a/clould-init/skydns.yaml
+++ b/clould-init/skydns.yaml
@@ -112,6 +112,7 @@ write_files:
         alias killdk="dk rm -f $(docker ps -qa)"
         alias sd="sudo systemctl"
         alias sdl="sd list-units"
+        alias sds="sd status"
         alias sdcat="sd cat"
         alias cci="sudo coreos-cloudinit --from-file"
         alias j="journalctl"
