--- a/units/registry.service
+++ b/units/registry.service
@@ -10,7 +10,8 @@ EnvironmentFile=/etc/environment
 EnvironmentFile=/var/lib/skydns/config
 TimeoutStartSec=10min
 ExecStartPre=/bin/sh -c "docker history registry:latest >/dev/null || docker pull registry:latest"
-ExecStartPre=/usr/bin/etcdctl set /skydns/${DOMAIN_PATH}/service/registry '{"host":"${COREOS_PRIVATE_IPV4}"}
+ExecStartPre=/usr/bin/etcdctl set /skydns/${DOMAIN_PATH}/service/registry '{"host": "${COREOS_PRIVATE_IPV4}", "port": 5050}'
+ExecStartPre=/usr/bin/etcdctl set /confd/prod/service/registry/endpoint "${COREOS_PRIVATE_IPV4}:5050"
 ExecStart=/usr/bin/docker run --rm --name %n -p ${COREOS_PRIVATE_IPV4}:5050:5000 -e SETTINGS_FLAVOR=prod  \
         -v /home/core/share/data:/data \
         -v /home/core/share/registry-conf/registry:/registry-conf \
