--- a/units/registry.service
+++ b/units/registry.service
@@ -1,22 +1,1 @@
-[Unit]
-Description=Docker Registry
-Requires=docker.service
-After=docker.service
-Requires=skydns.service
-After=skydns.service
-
-[Service]
-EnvironmentFile=/etc/environment
-EnvironmentFile=/var/lib/skydns/config
-TimeoutStartSec=20min
-ExecStartPre=/bin/sh -c "docker history registry:latest >/dev/null || docker pull registry:latest"
-ExecStartPre=/usr/bin/etcdctl set /skydns/${DOMAIN_PATH}/service/registry '{"host": "${COREOS_PRIVATE_IPV4}", "port": 5050}'
-ExecStartPre=/usr/bin/etcdctl set /confd/prod/service/registry/endpoint "${COREOS_PRIVATE_IPV4}:5050"
-ExecStart=/usr/bin/docker run --rm --name %n -p ${COREOS_PRIVATE_IPV4}:5050:5000 -e SETTINGS_FLAVOR=prod  \
-        -v /home/core/share/data:/data \
-        -v /home/core/share/registry-conf/registry:/registry-conf \
-        -e DOCKER_REGISTRY_CONFIG=/registry-conf/config.yml \
-        registry:latest
-ExecStopPost=/usr/bin/etcdctl rm /skydns/${DOMAIN_PATH}/service/registry
-RestartSec=1
-Restart=always
+../apps/registry/units/registry.service
