--- a/cloud-init/confd.yaml
+++ b/cloud-init/confd.yaml
@@ -42,17 +42,19 @@ coreos:
 
         - name: skydns-install.service
           command: start
-          content: |
-              [Unit]
+          content: |[Unit]
               Description=SkyDNS Installer
               
               [Service]
               Type=oneshot
               RemainAfterExit=true
-              ExecStart=-/usr/bin/mkdir -p /var/lib/skydns/bin
-              ExecStart=-/usr/bin/curl -L -o /var/lib/skydns/bin/skydns \
-                   https://github.com/xuwang/skydns-docker/releases/download/skydns-7025dba3834f/skydns
-              ExecStartPost=/usr/bin/chmod 755 /var/lib/skydns/bin/skydns
+              EnvironmentFile=/etc/environment
+              EnvironmentFile=/var/lib/skydns/env
+              ExecStart=-/bin/mkdir -p ${SKYDNS_CMD_PATH}
+              ExecStart=/bin/sh -c "[ -x ${SKYDNS_CMD} ] || (curl -L -o ${SKYDNS_CMD} ${SKYDNS_CMD_REPO} && chmod 755 ${SKYDNS_CMD})"
+              
+              [Install]  
+              WantedBy=multi-user.target        
         - name: skydns.service
           command: start
           content: |
@@ -62,29 +64,27 @@ coreos:
               Requires=etcd.service
               After=skydns-install.service
               After=etcd.service
-            
+              
               [Service]  
               Type=simple
               Restart=always
               RestartSec=5
-              ReadOnlyDirectories=/etc
               EnvironmentFile=/etc/environment
-              EnvironmentFile=/var/lib/skydns/config
+              EnvironmentFile=/var/lib/skydns/env
               PermissionsStartOnly=true
-              # Set skydns namespace ns=${DOMAIN}
-              ExecStartPre=/usr/bin/etcdctl set /skydns/${DOMAIN_PATH}/dns/ns '{"host":"${COREOS_PRIVATE_IPV4}"}'
-              ExecStartPre=/usr/bin/etcdctl set /skydns/${DOMAIN_PATH}/%H '{"host":"${COREOS_PRIVATE_IPV4}"}'
+              # For DNS to work properly SkyDNS needs to tell peers its nameservers. i.e. ns=<private_ip>
+              ExecStartPre=/usr/bin/sh -c "etcdctl get ${DNS_NAMESERVER_PATH} > /dev/null || etcdctl set ${DNS_NAMESERVER_PATH} {host:${COREOS_PRIVATE_IPV4}}"
+              ExecStartPre=/usr/bin/etcdctl set ${DOMAIN_PATH}/%H '{"host":"${COREOS_PRIVATE_IPV4}"}'
               # Set skydns configuration in etcd
               ExecStartPre=/usr/bin/etcdctl set /skydns/config ${SKYDNS_CONFIG}
-              ExecStart=/var/lib/skydns/bin/skydns -verbose=true -addr "${COREOS_PRIVATE_IPV4}:53"
+              ExecStart=/var/lib/skydns/bin/skydns
               ExecStopPost=-/usr/bin/etcdctl rm /skydns/config
-              ExecStopPost=-/usr/bin/etcdctl rm /skydns/${DOMAIN_PATH}/dns/ns
-              ExecStopPost=-/usr/bin/etcdctl rm /skydns/${DOMAIN_PATH}/%H
+              ExecStopPost=-/usr/bin/etcdctl rm ${DNS_NAMESERVER_PATH} --with-value '{host:${COREOS_PRIVATE_IPV4}}'
+              ExecStopPost=-/usr/bin/etcdctl rm ${DOMAIN_PATH}/%H
               
               [Install]  
               WantedBy=multi-user.target
-
-
+              
         - name: confd-install.service
           command: start
           content: |
@@ -97,19 +97,42 @@ coreos:
               ExecStart=-/usr/bin/bash -c "mkdir -p /var/lib/confd/{bin,conf.d,templates}"
               ExecStart=-/usr/bin/curl -L -o /var/lib/confd/bin/confd \
                    https://github.com/kelseyhightower/confd/releases/download/v0.5.0/confd-0.5.0-linux-amd64
-              ExecStartPost=/usr/bin/chmod 755 /var/lib/confd/bin/confd
+              ExecStartPost=/usr/bin/chmod 755 /var/lib/confd/bin/confd 
+              
+              [Install]  
+              WantedBy=multi-user.target
+        - name: confd.service
+          command: start
+          content: |    
+              [Unit]
+              Description=confd
+              Requires=confd-install.service
+              After=confd-install.service
+              Wants=etcd.service
+              After=etcd.service
+              
+              [Service]
+              ExecStart=/var/lib/confd/bin/confd -interval=30 -node "127.0.0.1:4001" -confdir /var/lib/confd
+              RestartSec=5
+              Restart=always
+              
+              [Install]  
+              WantedBy=multi-user.target
 write_files:
   - path: /var/lib/skydns/config
     content: |
+        # this is a unit env file for skydns
+        source /etc/environment
         DOMAIN=docker.local
         DOMAIN_PATH=local/docker
+        IN_ADDR_PATH=arpa/in-addr/`echo ${COREOS_PRIVATE_IPV4} | sed 's/\./\//g'`
         SKYDNS_CONFIG='{"domain":"docker.local","ttl":3600, "nameservers": ["8.8.8.8:53","8.8.4.4:53"]}'
   - path: /etc/resolv.conf
     permissions: 0644
     owner: root
     content: |
       domain docker.local
-      nameserver $private_ipv4
+      nameserver 127.0.0.1
       nameserver 8.8.8.8
   - path: /etc/profile.d/alias.sh
     content: |
