--- a/cloud-init/skydns.yaml
+++ b/cloud-init/skydns.yaml
@@ -1,1 +1,140 @@
-user-data
+#cloud-config
+
+coreos:
+    etcd:
+        addr: $private_ipv4:4001
+        peer-addr: $private_ipv4:7001
+        # runing a multi-node cluster with discovery mode:
+        # generate a new token for each unique cluster from https://discovery.etcd.io/new
+        # WARNING: replace each time you 'vagrant destroy'
+        #discovery: https://discovery.etcd.io/<token>
+    fleet:
+        public-ip: $private_ipv4
+    units:
+        - name: etcd.service
+          command: start
+        - name: fleet.service
+          command: start
+        - name: docker.service
+          command: start
+          content: |
+              .include /usr/lib/systemd/system/docker.service
+            
+              [Service]
+              # Use our own dns, instead of the host's.
+              EnvironmentFile=/var/lib/skydns/config
+              ExecStart=
+              ExecStart=/usr/bin/docker -d -s=btrfs -r=false -H fd:// --dns=$private_ipv4 --dns-search=${DOMAIN}
+        - name: docker-tcp.socket
+          command: start
+          enable: true
+          content: |
+              [Unit]
+              Description=Docker Socket for the API
+              
+              [Socket]
+              ListenStream=2375
+              Service=docker.service
+              BindIPv6Only=both
+              
+              [Install] 
+              WantedBy=sockets.target
+
+        - name: skydns-install.service
+          command: start
+          content: |[Unit]
+              Description=SkyDNS Installer
+              
+              [Service]
+              Type=oneshot
+              RemainAfterExit=true
+              EnvironmentFile=/etc/environment
+              EnvironmentFile=/var/lib/skydns/env
+              ExecStart=-/bin/mkdir -p ${SKYDNS_CMD_PATH}
+              ExecStart=/bin/sh -c "[ -x ${SKYDNS_CMD} ] || (curl -L -o ${SKYDNS_CMD} ${SKYDNS_CMD_REPO} && chmod 755 ${SKYDNS_CMD})"
+              
+              [Install]  
+              WantedBy=multi-user.target        
+        - name: skydns.service
+          command: start
+          content: |
+              [Unit]
+              Description=skydns
+              Requires=skydns-install.service
+              Requires=etcd.service
+              After=skydns-install.service
+              After=etcd.service
+              
+              [Service]  
+              Type=simple
+              Restart=always
+              RestartSec=5
+              EnvironmentFile=/etc/environment
+              EnvironmentFile=/var/lib/skydns/env
+              PermissionsStartOnly=true
+              # For DNS to work properly SkyDNS needs to tell peers its nameservers. i.e. ns=<private_ip>
+              ExecStartPre=/usr/bin/sh -c "etcdctl get ${DNS_NAMESERVER_PATH} > /dev/null || etcdctl set ${DNS_NAMESERVER_PATH} {host:${COREOS_PRIVATE_IPV4}}"
+              ExecStartPre=/usr/bin/etcdctl set ${DOMAIN_PATH}/%H '{"host":"${COREOS_PRIVATE_IPV4}"}'
+              # Set skydns configuration in etcd
+              ExecStartPre=/usr/bin/etcdctl set /skydns/config ${SKYDNS_CONFIG}
+              ExecStart=/var/lib/skydns/bin/skydns
+              ExecStopPost=-/usr/bin/etcdctl rm /skydns/config
+              ExecStopPost=-/usr/bin/etcdctl rm ${DNS_NAMESERVER_PATH} --with-value '{host:${COREOS_PRIVATE_IPV4}}'
+              ExecStopPost=-/usr/bin/etcdctl rm ${DOMAIN_PATH}/%H
+              
+              [Install]  
+              WantedBy=multi-user.target
+write_files:
+  - path: /var/lib/skydns/config
+    content: |
+        # this is a unit env file for skydns
+        source /etc/environment
+        DOMAIN=docker.local
+        DOMAIN_PATH=local/docker
+        IN_ADDR_PATH=arpa/in-addr/`echo ${COREOS_PRIVATE_IPV4} | sed 's/\./\//g'`
+        SKYDNS_CONFIG='{"domain":"docker.local","ttl":3600, "nameservers": ["8.8.8.8:53","8.8.4.4:53"]}'
+  - path: /etc/resolv.conf
+    permissions: 0644
+    owner: root
+    content: |
+      domain docker.local
+      nameserver 127.0.0.1
+      nameserver 8.8.8.8
+  - path: /etc/profile.d/alias.sh
+    content: |
+        alias lal="ls -al"
+        alias ll="ls -l"
+        alias dk="docker "
+        alias dkc="dk ps"
+        alias dkm="dk images"
+        alias dki="dk inspect"
+        alias dkb="dk build"
+        alias cleandkc="dkc -a --no-trunc| grep Exit | awk '{print \$1}' | xargs -L 1 -r docker rm"
+        alias cleandkm="dkm -a --no-trunc | grep none | awk '{print \$3}' | xargs -L 1 -r docker rmi"
+        alias cleandk="cleandkc && cleandkm"
+        alias killdk="dk rm -f $(docker ps -qa)"
+        alias sd="sudo systemctl"
+        alias sdl="sd list-units"
+        alias sds="sd status"
+        alias sdcat="sd cat"
+        alias cci="sudo coreos-cloudinit --from-file"
+        alias j="journalctl"
+        alias jfu="journalctl -f -u"
+        alias e="etcdctl"
+        alias els="e ls --recursive"
+        alias eget="e get"
+        alias eset="e set"
+        alias f="fleetctl -strict-host-key-checking=false"
+        alias fcat="f cat"
+        alias fss="f status"
+        alias fst="f start"
+        alias fdy="f destroy"
+        alias flm="f list-machines"
+        alias flu="f list-units"
+        alias fsh="f ssh"
+        function dkip() { docker inspect --format "{{ .NetworkSettings.IPAddress }}" $1 ; }
+        function dkid() { docker inspect --format "{{ .ID }}" $1 ; }
+        function dkim() { docker inspect --format "{{ .Image }}" $1 ; }
+        function dkst() { docker inspect --format "{{ .State.Running }}" $1 ; }
+        function sdrit() { sudo docker run -i -t $1 bash ; }
+        function nsa { sudo nsenter -p -u -m -i -n -t $(docker inspect -f "{{ .State.Pid }}" $1) ; }
