fix bugs and get vagrant up cleanly

--- a/apps/skydns/units/skydns.service
+++ b/apps/skydns/units/skydns.service
@@ -10,14 +10,14 @@ Type=simple
 Restart=always
 RestartSec=5
 EnvironmentFile=/etc/environment
-EnvironmentFile=/var/lib/apps/skydns/env
+EnvironmentFile=/var/lib/skydns/env
 PermissionsStartOnly=true
 # For DNS to work properly SkyDNS needs to tell peers its nameservers. i.e. ns=<private_ip>
 ExecStartPre=/usr/bin/sh -c "etcdctl get ${DNS_NAMESERVER_PATH} > /dev/null || etcdctl set ${DNS_NAMESERVER_PATH} {host:${COREOS_PRIVATE_IPV4}}"
 ExecStartPre=/usr/bin/etcdctl set ${DOMAIN_PATH}/%H '{"host":"${COREOS_PRIVATE_IPV4}"}'
 # Set skydns configuration in etcd
 ExecStartPre=/usr/bin/etcdctl set /skydns/config ${SKYDNS_CONFIG}
-ExecStart=/var/lib/apps/skydns/bin/skydns
+ExecStart=/bin/sh -c ${SKYDNS_CMD}
 ExecStopPost=-/usr/bin/etcdctl rm /skydns/config
 ExecStopPost=-/usr/bin/etcdctl rm ${DNS_NAMESERVER_PATH} --with-value '{host:${COREOS_PRIVATE_IPV4}}'
 ExecStopPost=-/usr/bin/etcdctl rm ${DOMAIN_PATH}/%H
