--- a/apps/skydns/units/skydns-install.service
+++ b/apps/skydns/units/skydns-install.service
@@ -6,7 +6,8 @@ Type=oneshot
 RemainAfterExit=true
 EnvironmentFile=/etc/environment
 EnvironmentFile=/var/lib/apps/skydns/env
-ExecStart=-/bin/mkdir -p ${SKYDNS_CMD_PATH}
+ExecStart=-/bin/mkdir -p ${SKYDNS_PATH}/bin
+ExecStart=-/bin/cp /var/lib/apps/skydns/env ${SKYDNS_PATH}
 ExecStart=/bin/sh -c "[ -x ${SKYDNS_CMD} ] || (curl -L -o ${SKYDNS_CMD} ${SKYDNS_CMD_REPO} && chmod 755 ${SKYDNS_CMD})" 
 
 [X-Fleet]
