--- a/apps/confd/units/confd.service
+++ b/apps/confd/units/confd.service
@@ -6,8 +6,8 @@ Wants=etcd.service
 After=etcd.service
 
 [Service]
-EnvironmentFile=/var/lib/apps/confd/env
-ExecStart=/bin/sh -c $CONFD_CMD $CONFD_OPTS
+EnvironmentFile=/var/lib/confd/env
+ExecStart=/usr/bin/bash -c $CONFD_CMD $CONFD_OPTS
 RestartSec=5
 Restart=always
 
