--- a/apps/registry/config.yml
+++ b/apps/registry/config.yml
@@ -1,19 +1,20 @@
---- 
-common: &common 
-  loglevel: info
-  search_backend: sqlalchemy
-  sqlalchemy_index_database: "sqlite:////data/docker-registry.db"
-  standalone: true
-  storage: local
-
-test: 
-  <<: *common
-  storage_path: /data/test
-
-dev: 
-  <<: *common
-  storage_path: /data/dev
-
-prod: 
-  <<: *common
-  storage_path: /data/prod
+version: 0.1
+log:
+  level: info
+  formatter: text
+  fields:
+    service: registry
+storage:
+    cache:
+        blobdescriptor: inmemory
+    filesystem:
+        rootdirectory: /var/lib/registry
+http:
+    addr: :5000
+    headers:
+        X-Content-Type-Options: [nosniff]
+health:
+  storagedriver:
+    enabled: true
+    interval: 10s
+    threshold: 3
