Fix Nginx for registry v2.
Ref: https://docs.docker.com/registry/nginx/

--- a/apps/nginx/conf.d/registry.conf
+++ b/apps/nginx/conf.d/registry.conf
@@ -1,7 +1,5 @@
 upstream registry {
-    
-    server 172.17.8.101:5000;
-    
+    server registry.service:5000;
 }
 
 server {
@@ -11,42 +9,27 @@ server {
     ssl on;
     ssl_certificate /etc/nginx/certs/site.crt;
     ssl_certificate_key /etc/nginx/certs/site.key;
-    
-    proxy_set_header Host             $http_host;   # required for docker client's sake
-    proxy_set_header X-Real-IP        $remote_addr; # pass on real client's IP
+    ssl_protocols TLSv1.1 TLSv1.2;
+    ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+
 
     client_max_body_size 0; # disable any limits to avoid HTTP 413 for large image uploads
 
     # required to avoid HTTP 411: see Issue #1486 (https://github.com/dotcloud/docker/issues/1486)
     chunked_transfer_encoding on;
-    
-    location / {
+
+    location /v2/ {
         auth_basic            "Restricted";
         auth_basic_user_file  /etc/nginx/certs/registry.htpasswd;
+        add_header Docker-Distribution-Api-Version registry/2.0 always;
         proxy_pass http://registry;
-    }
-    
-    # protect user specific repo 
-    location /v1/repositories/test {
-        auth_basic            "Restricted";
-        auth_basic_user_file  /etc/nginx/certs/test.htpasswd;
-        proxy_pass http://registry;
-    }
-    
-    location /v1/repositories/demo {
-        auth_basic            "Restricted";
-        auth_basic_user_file  /etc/nginx/certs/demo.htpasswd;
-        proxy_pass http://registry;
-    }
-    
-    # open to all for docker client to work
-    location /_ping {
-        auth_basic off;
-        proxy_pass http://registry;
-    }
-    
-    location /v1/_ping {
-        auth_basic off;
-        proxy_pass http://registry;
+        proxy_set_header Host             $http_host;   # required for docker client's sake
+        proxy_set_header X-Real-IP        $remote_addr; # pass on real client's IP
+        proxy_set_header Docker-Distribution-Api-Version registry/2.0;
+        proxy_set_header  X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header  X-Forwarded-Proto $scheme;
+        proxy_read_timeout                  900;
     }
 }
